<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="28dp"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:clipToPadding="false"
    tools:context=".Activitys.SignUp">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_sign_up"
            android:layout_margin="12dp"
            android:textSize="28sp"
            android:fontFamily="@font/croissant_one"
            android:textColor="@color/PrimaryColor"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textSize="19sp"
            android:inputType="textPersonName"
            android:textColor="@color/BackgroundText"
            android:hint="@string/first_name"
            android:textColorHint="@color/PrimaryColor"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_cust"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textSize="19sp"
            android:textColor="@color/BackgroundText"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/PrimaryColor"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_cust"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textSize="19sp"
            android:textColor="@color/BackgroundText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/PrimaryColor"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_cust"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textSize="19sp"
            android:textColor="@color/BackgroundText"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:textColorHint="@color/PrimaryColor"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_cust"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="290dp"
                android:layout_height="52dp"
                android:textSize="19sp"
                android:textColor="@color/BackgroundText"
                android:hint="@string/birthdate"
                android:inputType="date"
                android:textColorHint="@color/PrimaryColor"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_cust"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:tint="@color/PrimaryColor"
                android:src="@drawable/src_calendar"/>
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/PrimaryColor"
                app:buttonTint="@color/PrimaryColor"
                android:text="@string/male"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="0dp"
                android:textSize="19sp"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/PrimaryColor"
                app:buttonTint="@color/PrimaryColor"
                android:text="@string/male"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="0dp"
                android:textSize="19sp"/>
        </RadioGroup>

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:textSize="19sp"
            android:textColor="@color/BackgroundText"
            android:hint="@string/designation"
            android:inputType="number"
            android:textColorHint="@color/PrimaryColor"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_cust"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:layout_margin="12dp"
            android:text="@string/sign_up"
            android:textSize="18sp"
            app:cornerRadius="11dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/mate_sc"
            android:text="@string/sign_in"
            android:textColor="@color/PrimaryColor"
            android:textSize="23sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>