<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:padding="27dp"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.SignIn">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_sign_in"
            android:fontFamily="@font/croissant_one"
            android:layout_margin="50dp"
            android:textSize="28sp"
            android:textColor="@color/PrimaryColor"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:hint="@string/email_or_phone"
            android:textColorHint="@color/PrimaryColor"
            app:boxStrokeColor="@color/PrimaryColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailOrPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/PrimaryColor"
                android:textSize="19sp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:hint="@string/password"
            android:textColorHint="@color/PrimaryColor"
            app:boxStrokeColor="@color/PrimaryColor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/PrimaryColor"
                android:textSize="19sp"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnSignIn"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:layout_margin="12dp"
            android:text="@string/sign_in"
            android:textSize="18sp"
            app:cornerRadius="11dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/CreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/mate_sc"
            android:text="@string/create_account"
            android:textColor="@color/PrimaryColor"
            android:textSize="23sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>