<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="25dp"
    tools:context=".Operations.ExportedData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_data"
            android:fontFamily="@font/marcellus_sc"
            android:textStyle="bold"
            android:textColor="@color/GrepsColor"
            android:textSize="32sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="42dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/marcellus_sc"
                android:text="@string/first_name"
                android:textColor="@color/GrepsColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/first_name"
                android:textSize="19sp"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/GrepsColor"
                android:layout_margin="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/marcellus_sc"
                android:text="@string/last_name"
                android:textColor="@color/GrepsColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/last_name"
                android:textSize="19sp"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/GrepsColor"
                android:layout_margin="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/marcellus_sc"
                android:text="@string/email"
                android:textColor="@color/GrepsColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/email"
                android:textSize="19sp"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/GrepsColor"
                android:layout_margin="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/marcellus_sc"
                android:text="@string/phone_number"
                android:textColor="@color/GrepsColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/phone_number"
                android:textSize="19sp"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/GrepsColor"
                android:layout_margin="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/marcellus_sc"
                android:text="@string/birthdate"
                android:textColor="@color/GrepsColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/BirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/birthdate"
                android:textSize="19sp"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/GrepsColor"
                android:layout_margin="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/marcellus_sc"
                android:text="@string/gender"
                android:textColor="@color/GrepsColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/gender"
                android:textSize="19sp"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/GrepsColor"
                android:layout_margin="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/marcellus_sc"
                android:text="@string/designation"
                android:textColor="@color/GrepsColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/designation"
                android:textSize="19sp"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/GrepsColor"
                android:layout_margin="12dp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>